--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,28 @@
   color: rgb(44, 0, 44)
 }
 
+.header {
+  background-color: rgb(182, 255, 231);
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.header>* {
+  background-color: rgb(0, 255, 200);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100px
+}
+
 .container {
   width: 80%;
   padding: 5px;
-  background-color: rgb(230, 246, 255);
+  background-color: rgb(208, 255, 246);
+  border: 2px solid rgb(0, 118, 22);
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -23,7 +41,7 @@ input {
   margin-top: 20px;
   margin-bottom: 20px;
   height: 30px;
-  font-size: 32px;
+  font-size: 20px;
 }
 
 .card {
@@ -41,10 +59,10 @@ input {
   margin-right: auto;
 }
 
-/* label {
-  background-color: transparent;
+.success {
+  color: green;
 }
 
-form {
-  background-color: transparent;
-} */
+.error {
+  color: red;
+}
